# zero2prod

./: .env  Cargo.toml  Dockerfile  spec.yaml
configuration/: production.yaml
migrations/: 20240609192336_create_subscriptions_table.sql  20240715210111_make_status_not_null_in_subscriptions.sql  20240715210304_create_subscription_tokens_table.sql  20240721212452_remove_salt_from_users.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domains/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
